# superparsing

./: LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml
docs/: index.html
src/superparsing/: __init__.py
src/superparsing/core/: SubCommand.py  SuperFlag.py  SuperParseError.py  SuperParser.py  __init__.py
tests/: test_0.py  test_1984.py  test_comprehensive_TestKnownDefects.py  test_comprehensive_TestParseArgs.py  test_comprehensive_TestSubCommand.py  test_comprehensive_TestSuperFlag.py  test_comprehensive_TestSuperParserBasics.py  test_comprehensive_TestSuperParserText.py  test_patch.py
