[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "This project does superparsing."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "superparsing"
readme = "README.rst"
requires-python = ">=3.11"
version = "0.1.0"

[project.urls]
Download = "https://pypi.org/project/superparsing/#files"
Index = "https://pypi.org/project/superparsing/"
Source = "https://github.com/johannes-programming/superparsing/"
Website = "https://superparsing.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = true
